--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Travis Brooke</title>
+<title>Matthew Brooke</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://sll.wiredcircular.com/tools/landers/st/001phl/css/bootstrap-reboot.min.css">
@@ -38,13 +38,13 @@
 <div class="row">
 <div class="col col-md-6">
 <h1 class="logo">
-<span class="word1">Travis</span>
+<span class="word1">Matthew</span>
 <span class="word2">Brooke</span>
 </h1>
 </div>
 <div class="col col-md-6 cta-container">
 <button id="cta-btn" type="button" class="btn cta-btn">
-Click here to get Travis Brooke
+Click here to get TMatthew Brooke
 for FREE! </button>
 </div>
 </div>
