--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <div class="col col-md-6 cta-container">
 <button id="cta-btn" type="button" class="btn cta-btn">
-Click here to get TMatthew Brooke
+Click here to get Matthew Brooke
 for FREE! </button>
 </div>
 </div>
